2012-03-08  Koichiro Kikuchi <koichiro@rworks.jp>

	* util/pandora_db.pl: Merged from trunk. Fixed wrong SQL of my
	 previous commit.

2012-03-08  Koichiro Kikuchi  <koichiro@rworks.jp>

	* util/pandora_db.pl: Merged from trunk. Don't delete alerts if
	 non-init/unknown module to which these alerts assigned has not
	 been deleted.

2012-03-07  Sancho Lerena <slerena@artica.es>

        * util/pandora_xml_stress.conf
        util/pandora_xml_stress.pl: Now xml_stress tool can use units
        in the XML generated files. Default configuration file is useful
        to generate "real" scenarios.


2012-03-07  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Updated version.

	* lib/PandoraFMS/DataServer.pm: Support for "UNIT" tag in the
	XML to update module data units from the XML.

	* util/pandora_csvbridge.pl: New tool to create XML data files
	from CSV files containing data.

	* util/pandora_watchdog.sh: Watchdog for Pandora FMS server,
	taken from the documentation and updated.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_manage.pl: Modify call to function 
	pandora_delete_not_policy_modules adding md5 filename like a 
	parameter.

	Bugfix merged from trunk.

2012-02-16  Hirofumi Kosaka <kosaka@rworks.jp>

        * bin/tentacle_server: Upgraded to 0.3.0 (Merged from
        pandora_agent package).

2012-02-15  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Now PluginServer treats exit
	 status code 124 as "Unknown" when plugin type of the module
	 is nagios and module type is boolean. timeout exits with 124
	 if command times out.

	Merged from trunk.

2012-02-15  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: Merged from trunk. Added new options
	to CLI: Update module.

2012-02-14  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_exec: Merged from trunk. Quote command line arguments.

2012-02-13  Junichi Satoh <junichi@rworks.jp>
